// Copyright Â© 2017-2018 Stratumn SAS
//
// This program is free software: you can redistribute it and/or modify
// it under the terms of the GNU Affero General Public License as
// published by the Free Software Foundation, either version 3 of the
// License, or (at your option) any later version.
//
// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
// GNU Affero General Public License for more details.
//
// You should have received a copy of the GNU Affero General Public License
// along with this program. If not, see <https://www.gnu.org/licenses/>.

syntax = "proto3"; 

import "google/protobuf/descriptor.proto";

package stratumn.indigonode.cli.ext;

option go_package = "github.com/stratumn/go-indigonode/cli/grpc/ext;ext";

extend google.protobuf.MethodOptions {
  string method_desc = 50000;
  // Set this flag to true if the method should not be exposed by the CLI.
  bool method_no_cli = 50002;
}

extend google.protobuf.FieldOptions {
  string field_desc = 50100;
  bool field_required = 50101;
  bool field_base58 = 50110;
  bool field_multiaddr = 50111;
  bool field_time = 50120;
  bool field_duration = 50121;
  bool field_bytesize = 50130;
  bool field_byterate = 50131;
  bool field_blockchain_blocks = 50140;
  bool field_blockchain_txs = 50141;  
}
